# hswm

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  build.sh  cabal.project  flake.nix  genproto.sh  hie.yaml  hs-bindgen-test.sh  hswm.cabal  package.yaml  river.zig.zon.nix
app/: Main.hs
app-ctl/: Main.hs
cbits/: river-layer-shell-v1-client-protocol.h  river-xkb-config-v1-client-protocol.h  (+3 more)
hs-bindgen-hooks/: CHANGELOG.md  LICENSE  hs-bindgen-hooks.cabal
hs-bindgen-hooks/src/Distribution/HsBindgen/: Hooks.hs
hswm-bindings/: CHANGELOG.md  Makefile  Setup.hs  SetupHooks.hs  hswm-bindings.cabal  package.yaml
hswm-bindings/binding-specs/: pixman.yaml  river-input-management.yaml  river-window-management.yaml  wayland-client.yaml  wayland-server.yaml  wayland-util.yaml  xdg-shell.yaml
hswm-bindings/cbits/: river-status-unstable-v1-protocol.c  wlr-layer-shell-unstable-v1-protocol.c
hswm-bindings/include/: input-method-unstable-v2-client-protocol.h  river-input-management-v1-client-protocol.h  river-libinput-config-v1-client-protocol.h  river-status-unstable-v1-server-protocol.h  wlr-layer-shell-unstable-v1-client-protocol.h  wlr-output-management-unstable-v1-client-protocol.h  wlr-output-power-management-unstable-v1-client-protocol.h
hswm-bindings/include/wayland-protocols/: commit-timing-v1-client-protocol.h  ext-background-effect-v1-client-protocol.h  ext-foreign-toplevel-list-v1-client-protocol.h  ext-image-capture-source-v1-client-protocol.h  ext-image-copy-capture-v1-client-protocol.h  ext-workspace-v1-client-protocol.h  fifo-v1-client-protocol.h  fractional-scale-v1-client-protocol.h  fullscreen-shell-unstable-v1-client-protocol.h  input-method-unstable-v1-client-protocol.h  pointer-constraints-unstable-v1-client-protocol.h  pointer-warp-v1-client-protocol.h  primary-selection-unstable-v1-client-protocol.h  tablet-unstable-v1-client-protocol.h  tablet-unstable-v2-client-protocol.h  tablet-v2-client-protocol.h  viewporter-client-protocol.h  xdg-decoration-unstable-v1-client-protocol.h  xdg-output-unstable-v1-client-protocol.h  xdg-shell-client-protocol.h  xdg-toplevel-drag-v1-client-protocol.h
hswm-bindings/src/: Pixman.hs  River.hs  Wayland.hs  Wlr.hs
hswm-bindings/src/Bindings/: River.hs  RiverSafe.hs
hswm-bindings/src/Bindings/Pixman/: Generated.hs
hswm-bindings/src/Bindings/River/: InputManagement.hs  InputManagementV1.hs  LayerShell.hs  LayerShellV1.hs  LibinputConfig.hs  LibinputConfigV1.hs  WindowManagement.hs  WindowManagementV1.hs  XkbBindings.hs  XkbBindingsV1.hs  XkbConfig.hs  XkbConfigV1.hs
hswm-bindings/src/Bindings/River/InputManagementV1/: Generated.hs
hswm-bindings/src/Bindings/River/LayerShellV1/: Generated.hs
hswm-bindings/src/Bindings/River/LibinputConfigV1/: Generated.hs
hswm-bindings/src/Bindings/River/WindowManagementV1/: Generated.hs
hswm-bindings/src/Bindings/River/XkbBindingsV1/: Generated.hs
hswm-bindings/src/Bindings/River/XkbConfigV1/: Generated.hs
hswm-bindings/src/Bindings/Wayland/: Client.hs  ExtForeignTopLevelListV1.hs  ExtIdleNotifyV1.hs  ExtSessionLockV1.hs  FractionalScaleV1.hs  Util.hs  Viewporter.hs  WlrInputMethodUnstableV2.hs  WlrLayerShellUnstableV1.hs  WlrOutputManagementUnstableV1.hs  WlrOutputPowerManagementUnstableV1.hs  XdgOutputUnstableV1.hs  XdgShell.hs
hswm-bindings/src/Bindings/Wayland/Client/: Generated.hs
hswm-bindings/src/Bindings/Wayland/ExtIdleNotifyV1/: Generated.hs
hswm-bindings/src/Bindings/Wayland/ExtSessionLockV1/: Generated.hs
hswm-bindings/src/Bindings/Wayland/FractionalScaleV1/: Generated.hs
hswm-bindings/src/Bindings/Wayland/Internal/: TH.hs  Types.hs
hswm-bindings/src/Bindings/Wayland/Protocol/: ForeignTopLevelListV1.hs
hswm-bindings/src/Bindings/Wayland/Protocol/ForeignTopLevelListV1/: Generated.hs
hswm-bindings/src/Bindings/Wayland/Util/: Generated.hs
hswm-bindings/src/Bindings/Wayland/Viewporter/: Generated.hs
hswm-bindings/src/Bindings/Wayland/WlrInputMethodUnstableV2/: Generated.hs
hswm-bindings/src/Bindings/Wayland/WlrLayerShellUnstableV1/: Generated.hs
hswm-bindings/src/Bindings/Wayland/WlrOutputManagementUnstableV1/: Generated.hs
hswm-bindings/src/Bindings/Wayland/WlrOutputPowerManagementUnstableV1/: Generated.hs
hswm-bindings/src/Bindings/Wayland/XdgOutputUnstableV1/: Generated.hs
hswm-bindings/src/Bindings/Wayland/XdgShell/: Generated.hs
hswm-bindings/src/Bindings/Wlr/: InputMethodUnstableV2.hs  LayerShellUnstableV1.hs  OutputManagementUnstableV1.hs  OutputPowerManagementUnstableV1.hs
hswm-bindings/src/River/: InputManagement.hs  Interfaces.hs  LayerShell.hs  LibinputConfig.hs  Objects.hs  Safe.hs  WindowManagement.hs  XkbBindings.hs  XkbConfig.hs
hswm-bindings/src/Wayland/: Client.hs  Types.hs  Viewporter.hs
hswm-bindings/src/Wayland/Client/: Display.hs  Extras.hs  Interface.hs  Objects.hs
hswm-bindings/src/Wayland/Client/Internal/: TH.hs  Types.hs
hswm-bindings/src/Wayland/Internal/: TH.hs
hswm-bindings/tests/: PixmanSpec.hs
pixman-bindings/: CHANGELOG.md  SetupHooks.hs  pixman-bindings.cabal
pixman-bindings/src/: Pixman.hs
pixman-bindings/test/: PixmanSpec.hs
waybar-cffi-hs/: Makefile  README.md  waybar-cffi-hs.cabal  waybar_cffi_module.h
waybar-cffi-hs/cbits/: module-init.c
waybar-cffi-hs/lib/Waybar/CFFI/: Plugin.hs
waybar-cffi-hs/lib/Waybar/CFFI/Plugin/: Base.hs  HSWM.hs
waybar-cffi-hs/plugin/: Plugin.hs
waybar-cffi-hs/plugin/Waybar/CFFI/: Plugin.hs
waybar-cffi-hs/src/Waybar/CFFI/Plugin/: ABIv2.hs  Base.hs  HSWM.hs  TH.hs
xkbcommon-bindings/: CHANGELOG.md  Setup.hs  SetupHooks.hs  xkbcommon-bindings.cabal
xkbcommon-bindings/src/Text/: XkbCommon.hs
xkbcommon-bindings/src/Text/XkbCommon/: Context.hs  EventCodes.hs  FFI.hsc  Internal.chs  Internal.hsc  KeySym.hs  KeySym.hsc  KeySyms.hs  Keymap.hs  Registry.hsc  State.hs  Types.hsc  XkbContext.hsc  XkbKeymap.hsc  XkbRmlvoBuilder.hsc  XkbState.hsc
xkbcommon-bindings/src/Text/XkbCommon/Internal/: TH.hs
xkbcommon-bindings/src/Text/XkbCommon/Keymap/: RmlvoBuilder.hs
xkbcommon-bindings/tests/Text/: XkbCommonSpec.hs  XkbRegistrySpec.hs
(+169 files in other folders)
