cabal-version:      3.0
name:               hswm
version:            0.1.0.0
synopsis:           Wayland window manager for River
description:        Wayland window manager for River
license:            MIT
license-file:       LICENSE
author:             Samuli Thomasson
maintainer:         samuli.thomasson@pm.me
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
--                  CHANGELOG.md
extra-source-files:
    cbits/river-window-management-v1-client-protocol.c

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: Wayland.Bindings
                   , RiverWM.Bindings
                   , RiverWM.XKB
                   , Wayland
                   , Core
                   , MyLib
                   , HSWM.Types
                   , HSWM.Types.XKB
                   , HSWM.Operations
                   , HSWM.Actions
    other-modules: Prelude
    build-depends:    base ^>=4.20.2.0
                    , data-default
                    , mtl
                    , stm
                    , logging
                    , text
                    , derive-storable
                    , containers
                    , typerep-map
                    , unix
    hs-source-dirs:   src
    include-dirs:     cbits
    c-sources:        cbits/river-window-management-v1-protocol.c
                    , cbits/river-xkb-bindings-v1-protocol.c
    pkgconfig-depends: wayland-client, xkbcommon
    extra-libraries:   wayland-client, xkbcommon

    default-language: GHC2024
    default-extensions: RecordWildCards
                      , OverloadedRecordDot
                      , DuplicateRecordFields
                      , OverloadedStrings

    -- XXX fix this
    -- build-tool-depends: c2hs:c2hs

    -- Modules included in this library but not exported.
    -- other-modules:

executable hswm
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0
                    , hswm
    hs-source-dirs:   app
    pkgconfig-depends: wayland-client
    extra-libraries:   wayland-client
    default-language:  GHC2024
