cabal-version:      3.0
name:               hswm
version:            0.1.0.0
synopsis:           Wayland window manager for River
description:        Wayland window manager for River
license:            MIT
license-file:       LICENSE
author:             Samuli Thomasson
maintainer:         samuli.thomasson@pm.me
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
--                  CHANGELOG.md
extra-source-files:
    Makefile
  , cbits/river-window-management-v1-client-protocol.c
  , cbits/river-xkb-config-v1-protocol.c

common common
    ghc-options: -Wall -Wunused-packages
    build-depends: base >=4.20.2.0
    default-language:  GHC2024
    default-extensions: RecordWildCards
                      , OverloadedRecordDot
                      , DuplicateRecordFields
                      , OverloadedStrings

library
    import:          common
    hs-source-dirs:  src
    exposed-modules: Wayland.FFI
                   , Wayland.Bindings
                   , Wayland
                   , River.WMP.FFI
                   , River.WMP.MiscFFI
                   , River.WMP
                   , River.XKB.Bindings.FFI
                   , River.XKB.Bindings.MiscFFI
                   , River.XKB.Bindings
		   , River.XKB.Config
		   , River.XKB.Config.FFI
                   , River
		   , HSWM
                   , HSWM.Seats
		   , HSWM.Core
                   , HSWM.XKB
                   , HSWM.XKB.FFI
                   , HSWM.Types
		   , HSWM.StackSet
                   , HSWM.Main
                   , HSWM.Operations
                   , HSWM.Actions
		   , HSWM.Utils
                   , HSWM.Layout
                   , Core
    autogen-modules:
    build-depends:    base >=4.20.2.0
                    , data-default
		    , transformers
                    , mtl
                    , stm
                    , logging
                    , text
                    , derive-storable
                    , containers
                    , typerep-map
                    , unix
		    , pretty-simple
    other-modules: Prelude
    include-dirs:     cbits
    c-sources:        cbits/river-window-management-v1-protocol.c
                    , cbits/river-input-management-v1-protocol.c
                    , cbits/river-xkb-bindings-v1-protocol.c
		    , cbits/river-xkb-config-v1-protocol.c
    pkgconfig-depends: wayland-client, xkbcommon
    extra-libraries:   wayland-client, xkbcommon

    -- XXX fix this
    -- build-tool-depends: c2hs:c2hs
    build-depends:
      , c-expr-runtime
      , hs-bindgen
      , hs-bindgen-runtime

    -- Modules included in this library but not exported.
    -- other-modules:

executable hswm
    import:           common
    main-is:          Main.hs
    build-depends:    hswm
    hs-source-dirs:   app
    pkgconfig-depends: wayland-client
    extra-libraries:   wayland-client
