cabal-version:      3.4
name:               hswm
version:            0.1.0.0
synopsis:           Wayland window manager for River
description:        Wayland window manager for River
license:            MIT
license-file:       LICENSE
author:             Samuli Thomasson
maintainer:         samuli.thomasson@pm.me
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
--                  CHANGELOG.md
extra-source-files:
  , Makefile
  , cbits/river-window-management-v1-client-protocol.c
  , cbits/river-xkb-config-v1-protocol.c

common common
    ghc-options: -Wall -Wunused-packages
    build-depends: base >=4.20.2.0
    default-language: GHC2024
    default-extensions:
      , RecordWildCards
      , OverloadedRecordDot
      , DuplicateRecordFields
      , OverloadedStrings

library
    import:          common
    hs-source-dirs:  src
    other-modules: Prelude
    -- Note: c2hs is clunky about the order of exposed modules :(
    exposed-modules:
      , Wayland.FFI
      , Wayland.Bindings
      , Wayland
      , River.XKB.Config.FFI
      , River.XKB.Config
      , River.XKB.Bindings.MiscFFI
      , River.XKB.Bindings.FFI
      , River.XKB.Bindings
      , River.WMP.MiscFFI
      , River.WMP.FFI
      , River.WMP
      , River
      , HSWM.XKB.FFI
      , HSWM.XKB
      , HSWM.Utils
      , HSWM.Types
      , HSWM.StackSet
      , HSWM.Seats
      , HSWM.Operations
      , HSWM.Main
      , HSWM.Layout
      , HSWM.Core
      , HSWM.Actions
      , HSWM
      , Core
      , Paths_hswm
    autogen-modules: Paths_hswm
    build-depends:
      , containers
      , data-default
      , derive-storable
      , logging
      , mtl
      , pretty-simple
      , stm
      , text
      , transformers
      , typerep-map
      , unix
    pkgconfig-depends:
      , wayland-client
      , xkbcommon
    extra-libraries:
      , wayland-client
      , xkbcommon
    include-dirs: cbits
    c-sources:
      , cbits/river-input-management-v1-protocol.c
      , cbits/river-window-management-v1-protocol.c
      , cbits/river-xkb-bindings-v1-protocol.c
      , cbits/river-xkb-config-v1-protocol.c
    build-tool-depends:
      -- Note: may need to "cabal update for this to start working
      , c2hs:c2hs
    build-depends:
      -- XXX: below for hs-bindgen-cli testing
      -- , c-expr-runtime
      , hs-bindgen
      -- , hs-bindgen-runtime

executable hswm
    import:           common
    main-is:          Main.hs
    build-depends:    hswm
    hs-source-dirs:   app
    pkgconfig-depends: wayland-client
    extra-libraries:   wayland-client
