cabal-version:      3.0
name:               hs-bindgen-hooks
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Samuli Thomasson
maintainer:         samuli.thomasson@pm.me
-- copyright:
category:           Distribution
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Distribution.HsBindgen.Hooks
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.22.0.0
                    , Cabal-hooks
                    , Cabal
                    , containers
                    , yaml
    hs-source-dirs:   src
    default-language: GHC2024
