cabal-version: 3.14
name:               hswm-bindings
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Samuli Thomasson
maintainer:         samuli.thomasson@pm.me
build-type:         Hooks
tested-with:
      GHC == 9.12.2
    , GHC == 9.14.1
extra-source-files:
      binding-specs/*.yaml
      protocol/*.xml
extra-doc-files:
      CHANGELOG.md

custom-setup
    setup-depends:
          Cabal >=3.14 && <3.17
        , base >=4.21 && <4.23
        , Cabal-hooks
        , hs-bindgen-hooks
        , filepath

flag use-pkgconfig
    description: Use pkgconfig to resolve C dependencies
    manual: True
    default: True

flag hs-bindgen-build-tool
    description: Use build-tool-depends for hs-bindgen-cli
    manual: True
    default: True

library
    exposed-modules:
          -- higher-level
          Wayland
          Wayland.Viewporter
          Wayland.Types
          Wayland.Internal.TH
          River
          River.InputManagement
          River.LayerShell
          River.LibinputConfig
          River.WindowManagement
          River.XkbBindings
          River.XkbConfig
          -- (mostly) generated
          Bindings.Wayland.Util
          Bindings.Wayland.Client
          Bindings.Wayland.XdgShell
          Bindings.Wayland.ExtIdleNotifyV1
          Bindings.Wayland.ExtSessionLockV1
          Bindings.Wayland.FractionalScaleV1
          Bindings.Wayland.ExtForeignTopLevelListV1
          Bindings.Wayland.Viewporter
          Bindings.Wayland.XdgOutputUnstableV1
          Bindings.Wlr.InputMethodUnstableV2
          Bindings.Wlr.LayerShellUnstableV1
          Bindings.Wlr.OutputManagementUnstableV1
          Bindings.Wlr.OutputPowerManagementUnstableV1
          Bindings.River
          Bindings.River.InputManagementV1
          Bindings.River.LayerShellV1
          Bindings.River.LibinputConfigV1
          Bindings.River.WindowManagementV1
          Bindings.River.XkbBindingsV1
          Bindings.River.XkbConfigV1
    other-modules:
          Paths_hswm_bindings
    autogen-modules:
          Paths_hswm_bindings
    build-depends:
          base >=4.21 && <4.23
        , c-expr-runtime >=0.1.0 && <0.2
        , containers
        , data-default >=0.8.0 && <0.9
        , deepseq >=1.5.1 && <1.6
        , hashable >=1.5.1 && <1.6
        , hs-bindgen-runtime >=0.1.0 && <0.2
        , template-haskell >=2.23 && <2.25
        , text >=2.1.2 && <2.2
        , unix
        , unliftio
        , xml-conduit >=1.10.1 && <1.11
    hs-source-dirs:
          src
    default-extensions:
          DuplicateRecordFields
          OverloadedStrings
          OverloadedLabels
          TemplateHaskell
          TypeFamilies
          PatternSynonyms
    ghc-options: -Wall -Wunused-packages -fPIC
    default-language: GHC2024

    if flag(use-pkgconfig)
        pkgconfig-depends:
              wayland-client
            , wayland-protocols
    else
        extra-libraries:
              wayland-client

    if flag(hs-bindgen-build-tool)
       build-tool-depends:
           hs-bindgen:hs-bindgen-cli

test-suite test-suite
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
          Paths_hswm_bindings
    autogen-modules:
          Paths_hswm_bindings
    hs-source-dirs:
          tests
    build-tool-depends:
          hspec-discover:hspec-discover
    build-depends:
          base
        , hspec
        , hswm-bindings
    default-language: Haskell2010
