cabal-version: 3.12
name: waybar-cffi-hs
version: 0.0.1
synopsis: Waybar C FFI module
description: Waybar C FFI module
build-type: Simple
extra-source-files:
  cbits/module-init.c
  include/waybar_cffi_module.h
tested-with:
  GHC == 9.12.2

common deps
  build-depends:
    aeson >=2.2.3 && <2.3,
    base >=4.20.2.0 && <4.22,
    bytestring ^>=0.12.2,
    derive-storable ^>=0.3.1,
    haskell-gi-base ^>=0.26.9,
    gi-gtk3 ^>=3.0.44,
    gi-pango ^>=1.0.30,
    hswm,
    text ^>=2.1.2,
    rio ^>=0.1.24,
    monad-logger-aeson ^>=0.4.1,

common default-language
  default-language: GHC2024
  default-extensions:
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    RecordWildCards

common build-settings
  ghc-options:
    -Wall
    -Wunused-packages
    -Wno-ambiguous-fields
    -threaded
    -fPIC
    -fsplit-sections

  ghc-shared-options:
    -flink-rts

flag static
  manual: True
  default: False

library
  import: deps, default-language, build-settings
  hs-source-dirs: lib
  exposed-modules:
    Waybar.CFFI.Plugin.Base
    Waybar.CFFI.Plugin.HSWM

  other-modules:
    Paths_waybar_cffi_hs

  autogen-modules:
    Paths_waybar_cffi_hs

  include-dirs: include

foreign-library waybarhaskellplugin
  import: default-language, build-settings
  type: native-shared
  lib-version-linux: 1.0.0
  hs-source-dirs: plugin
  build-depends:
    base,
    waybar-cffi-hs,
  other-modules:
    Waybar.CFFI.Plugin

  c-sources: cbits/module-init.c
  cc-options: -DWCFFI_VERSION=2

  if flag(static)
    options: standalone
