cabal-version: 3.12
name: waybar-cffi-hs
version: 0.1.0.0
synopsis: Waybar C FFI module
description: Waybar C FFI module
license: MIT
license-file: LICENSE
author: Samuli Thomasson
maintainer: samuli.thomasson@pm.me
build-type: Simple
tested-with:
  GHC == 9.14.1
  GHC == 9.12.2

extra-source-files:
  cbits/module-init.c
  include/waybar_cffi_module.h

flag standalone
  description: Build a statically linked .so
  manual: True
  default: False

common default-language
  default-language: GHC2024
  default-extensions:
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    RecordWildCards

common build-settings
  ghc-options:
    -Wall
    -Wunused-packages
    -Wno-ambiguous-fields
    -threaded
    -O2
    -fPIC
    -flink-rts

library
  import: default-language, build-settings
  hs-source-dirs: lib
  build-depends:
    base                >=4.20.2 && <4.23,
    aeson              ^>=2.2.3,
    bytestring         ^>=0.12.2,
    data-default,
    text               ^>=2.1.2,
    derive-storable    ^>=0.3.1,
    rio                ^>=0.1.24,
    monad-logger-aeson ^>=0.4.1,
    haskell-gi-base    ^>=0.26.9,
    gi-gtk3            ^>=3.0.44,
    gi-pango           ^>=1.0.30,
    template-haskell    >=2.23 && <2.25,
    hswm,
  exposed-modules:
    Waybar.CFFI.Plugin.Base
    Waybar.CFFI.Plugin.HSWM
  other-modules:
    Paths_waybar_cffi_hs
  autogen-modules:
    Paths_waybar_cffi_hs
  --include-dirs: include

foreign-library waybarhaskellplugin
  import: default-language, build-settings
  type: native-shared
  lib-version-linux: 1.0.0
  hs-source-dirs: plugin
  other-modules:
    Waybar.CFFI.Plugin
  build-depends:
    base,
    waybar-cffi-hs,
  c-sources: cbits/module-init.c
  cc-options: -DWCFFI_VERSION=2
  extra-libraries: xkbcommon, xkbregistry

  if flag(standalone)
    options: standalone
  ghc-options:
    -no-hs-main
