cabal-version: 3.12

name: waybar-cffi-hs
version: 0.1.0.0
synopsis: Waybar C FFI module
description: Waybar C FFI module
license: MIT
license-file: LICENSE
author: Samuli Thomasson
maintainer: samuli.thomasson@pm.me
build-type: Simple
tested-with:
  GHC == 9.14.1
  GHC == 9.12.2

flag standalone
  description: Build a statically linked .so
  manual: True
  default: False

common default-language
  default-language: GHC2024
  default-extensions:
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    RecordWildCards

common build-settings
  ghc-options:
    -Wall
    -Wunused-packages
    -Wno-ambiguous-fields

library
  import: default-language, build-settings
  exposed-modules:
    Waybar.CFFI.Plugin.ABIv2
    Waybar.CFFI.Plugin.Base
    Waybar.CFFI.Plugin.TH
    Waybar.CFFI.Plugin.HSWM
  other-modules:
    Paths_waybar_cffi_hs
  autogen-modules:
    Paths_waybar_cffi_hs
  hs-source-dirs: src
  build-depends:
      base                >=4.20   && <5
    , template-haskell    >=2.23   && <3
    , bytestring         ^>=0.12.2
    , data-default
    , text               ^>=2.1.2
    , mtl
    , aeson              ^>=2.2.3
    , derive-storable    ^>=0.3.1
    , rio                ^>=0.1.24
    , monad-logger-aeson ^>=0.4.1
    , haskell-gi-base    ^>=0.26.9
    , gi-gtk3            ^>=3.0.44
    , gi-pango           ^>=1.0.30
    , hswm

foreign-library waybarhaskellplugin
  import: default-language, build-settings
  type: native-shared
  lib-version-linux: 1.0.0
  other-modules: Plugin
  hs-source-dirs: plugin
  build-depends:
      base
    , waybar-cffi-hs
  ghc-options:
    -threaded
    -flink-rts
    -no-hs-main

  if !os(linux)
    buildable: False

  if flag(standalone)
    options: standalone
    ghc-options: -fPIC
