cabal-version:      3.12
name:               xkbcommon-bindings
version:            0.1.0.0
synopsis:           Low-level bindings to libxkbcommon
description:        Low-level bindings to libxkbcommon e.g. xkbcommon.h (incomplete)
license:            MIT
license-file:       LICENSE
author:             Samuli Thomasson
maintainer:         samuli.thomasson@pm.me
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:
  GHC == 9.12.2
  GHC == 9.14.1
-- extra-source-files:

common warnings
    ghc-options:
      -Wall
      -Wunused-packages

common language
  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GeneralizedNewtypeDeriving
    OverloadedRecordDot
    TypeApplications

library
    import: warnings, language
    exposed-modules:
       Text.XkbCommon
     , Text.XkbCommon.FFI
     , Text.XkbCommon.Registry
    build-depends:
       base >=4.21.0.0 && <4.23
     , data-default ^>=0.8
     , unix ^>=2.8.6
     , rio ^>=0.1.24
    hs-source-dirs:   src
    extra-libraries:
       xkbcommon
     , xkbregistry
    build-tool-depends:
       hsc2hs:hsc2hs

test-suite spec
  import: warnings, language
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Text.XkbCommonSpec
    , Text.XkbRegistrySpec
  hs-source-dirs: tests
  build-depends:
      base
    , xkbcommon-bindings
    , hspec
    , QuickCheck
  build-tool-depends:
    hspec-discover:hspec-discover
