cabal-version:      3.12
name:               xkbcommon-bindings
version:            0.1.0.0
synopsis:           Low-level bindings to libxkbcommon
description:        Low-level bindings to libxkbcommon e.g. xkbcommon.h (incomplete)
license:            MIT
license-file:       LICENSE
author:             Samuli Thomasson
maintainer:         samuli.thomasson@pm.me
-- copyright:
category:           System
build-type:         Custom
extra-doc-files:    CHANGELOG.md
tested-with:        GHC == 9.14.1, GHC == 9.12.2
-- extra-source-files:

custom-setup
  setup-depends:
      base
    , Cabal

common warnings
    ghc-options:
      -Wall
      -Wunused-packages

common language
  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GeneralizedNewtypeDeriving
    OverloadedRecordDot
    TypeApplications

flag use-pkgconfig
  description: Use pkg-config to find xkbcommon headers
  default: False

library
    import: warnings, language
    exposed-modules:
       Text.XkbCommon
     , Text.XkbCommon.EventCodes
     , Text.XkbCommon.Internal
     , Text.XkbCommon.Internal.TH
     , Text.XkbCommon.KeySym
     , Text.XkbCommon.KeySyms
     , Text.XkbCommon.Registry
     , Text.XkbCommon.Types
     , Text.XkbCommon.XkbContext
     , Text.XkbCommon.XkbKeymap
     , Text.XkbCommon.XkbRmlvoBuilder
     , Text.XkbCommon.XkbState
    build-depends:
       base              >=4.21   && <4.23
     , template-haskell  >=2.23   && <2.25
     , data-default     ^>=0.8
     , unix             ^>=2.8.6
    hs-source-dirs:   src
    if flag(use-pkgconfig)
      pkgconfig-depends: xkbcommon
    else
      extra-libraries: xkbcommon, xkbregistry
    build-tool-depends:
       hsc2hs:hsc2hs

test-suite spec
  import: warnings, language
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: tests
  build-depends:
      base
    , hspec
    , xkbcommon-bindings
  other-modules:
      Text.XkbCommonSpec
    , Text.XkbRegistrySpec
  build-tool-depends:
    hspec-discover:hspec-discover
  ghc-options: -threaded -with-rtsopts=-N
