cabal-version:      3.14
build-type:         Hooks
name:               xkbcommon-bindings
version:            0.1.0.0
synopsis:           Low-level bindings to libxkbcommon
description:        Low-level bindings to libxkbcommon e.g. xkbcommon.h (incomplete)
license:            MIT
license-file:       LICENSE
author:             Samuli Thomasson
maintainer:         samuli.thomasson@pm.me
-- copyright:
category:           System
extra-doc-files:    CHANGELOG.md
tested-with:        GHC == 9.14.1, GHC == 9.12.2
-- extra-source-files:

custom-setup
  setup-depends:
      base
    , Cabal-hooks

common warnings
    ghc-options:
      -Wall
      -Wunused-packages

common language
  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GeneralizedNewtypeDeriving
    OverloadedRecordDot
    TypeApplications

flag use-pkgconfig
  description: Use pkg-config to find xkbcommon headers
  default: False

library
    import: warnings, language
    exposed-modules:
       Text.XkbCommon
     , Text.XkbCommon.KeySym
     , Text.XkbCommon.Registry
     , Text.XkbCommon.Context
     , Text.XkbCommon.Keymap
     , Text.XkbCommon.Keymap.RmlvoBuilder
     , Text.XkbCommon.State
     , Text.XkbCommon.EventCodes
     , Text.XkbCommon.KeySyms
    other-modules:
       Text.XkbCommon.Internal
     , Text.XkbCommon.FFI
    autogen-modules:
       Text.XkbCommon.EventCodes
     , Text.XkbCommon.KeySyms
    build-depends:
       base              >=4.21   && <5
     , data-default     ^>=0.8
     , unix             ^>=2.8.6
    hs-source-dirs:   src
    if flag(use-pkgconfig)
      pkgconfig-depends: xkbcommon
    else
      extra-libraries: xkbcommon, xkbregistry
    build-tool-depends:
       hsc2hs:hsc2hs
    if !os(linux)
      buildable: False

test-suite spec
  import: warnings, language
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: tests
  build-depends:
      base
    , hspec
    , xkbcommon-bindings
  other-modules:
      Text.XkbCommonSpec
    , Text.XkbRegistrySpec
  build-tool-depends:
    hspec-discover:hspec-discover
  ghc-options: -threaded -with-rtsopts=-N
